--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "author": "Backwards",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/BackwardsUser/localhostqr"
+  },
   "devDependencies": {
     "nodemon": "^3.0.3",
     "@types/node": "^20.11.16",
